# 42sh

./: .gitignore  .gitlab-ci.yml  README.md  configure.ac  coverage.sh
src/: 42sh.c  Makefile.am  quarantedeuxsh.h
src/ast/: Makefile.am  ast.c  ast.h  ast_free.c  ast_new.c  ast_new.h  ast_print.c  ast_print.h
src/built_in/: Makefile.am  built_in.h  cd.c  echo.c  echo.h  exit.c  true_false.c  true_false.h
src/built_in/test/: main_cd.c  main_exit.c
src/domain_expansion/: Makefile.am  domain_expansion.c  domain_expansion.h  domain_traversal.c  string_builder.c  string_builder.h
src/eval/: Makefile.am  eval.c  eval.h  eval_redir.c
src/hash_map/: Makefile.am  hash_map.c  hash_map.h
src/lexer/: Makefile.am  get_string.c  lexer.c  lexer.h  main.c  main2.c  token.h
src/lexer/tests_files/: main.c  main2.c
src/parser/: Makefile.am  parser.c  parser.h  parser_command.c  parser_command.h  parser_if.c  parser_if.h  parser_io.c  parser_io.h  parser_loop.c  parser_loop.h  parser_misc.c  parser_misc.h
tests/: Makefile.am  forbidden.sh  testlexer.c  testsuite.sh
tests/arguments/: echo_E.txt  echo_e.txt  echo_n.txt  simple_command.txt  simple_command3.txt
tests/criterion-tests/: testlexer.c
tests/lexer/: lexer_test.c
tests/piscine-scripts/: ascii_house.sh  find_ascii.sh  rickroll.sh  tower.sh
tests/redirections/append/: append_basic1.sh  append_basic2.sh  append_complex1.sh  append_complex2.sh  append_complex3.sh  append_empty_left.sh  append_empty_right.sh  append_multiple1.sh  append_multiple2.sh  append_multiple3.sh  append_multiple_lines.sh  append_random1.sh  append_random2.sh  append_stderr1.sh  append_stderr2.sh  append_stderr3.sh  append_stderr4.sh  append_stderr5.sh  append_stdin1.sh  append_stdin2.sh  append_stdin3.sh  append_stdout1.sh  append_stdout2.sh  append_stdout3.sh  append_stdout4.sh
tests/redirections/clobber/: clobber_basic1.sh  clobber_basic2.sh  clobber_complex1.sh  clobber_complex2.sh  clobber_complex3.sh  clobber_empty.sh  clobber_empty_left.sh  clobber_empty_right.sh  clobber_multiple1.sh  clobber_multiple2.sh  clobber_multiple3.sh  clobber_multiple_lines.sh  clobber_random1.sh  clobber_random2.sh  clobber_stderr1.sh  clobber_stderr2.sh  clobber_stderr3.sh  clobber_stderr4.sh  clobber_stderr5.sh  clobber_stdin1.sh  clobber_stdin2.sh  clobber_stdin3.sh  clobber_stdout1.sh  clobber_stdout2.sh  clobber_stdout3.sh  clobber_stdout4.sh
tests/redirections/great/: great_basic1.sh  great_complex1.sh  great_complex2.sh  great_complex3.sh  great_empty_left.sh  great_empty_right.sh  great_multiple1.sh  great_multiple2.sh  great_multiple3.sh  great_multiple_lines.sh  great_random1.sh  great_random2.sh  great_stderr1.sh  great_stderr2.sh  great_stderr3.sh  great_stderr4.sh  great_stderr5.sh  great_stdin1.sh  great_stdin2.sh  great_stdin3.sh  great_stdout1.sh  great_stdout2.sh  great_stdout3.sh  great_stdout4.sh
tests/redirections/greatand/: greatand_basic1.sh  greatand_basic2.sh  greatand_complex1.sh  greatand_complex2.sh  greatand_complex3.sh  greatand_empty.sh  greatand_empty_left.sh  greatand_empty_right.sh  greatand_multiple1.sh  greatand_multiple2.sh  greatand_multiple3.sh  greatand_multiple_lines.sh  greatand_random1.sh  greatand_random2.sh  greatand_stderr1.sh  greatand_stderr2.sh  greatand_stderr3.sh  greatand_stderr4.sh  greatand_stderr5.sh  greatand_stdin1.sh  greatand_stdin2.sh  greatand_stdin3.sh  greatand_stdout1.sh  greatand_stdout2.sh  greatand_stdout3.sh  greatand_stdout4.sh
tests/redirections/less/: less_basic1.sh  less_basic2.sh  less_complex1.sh  less_complex2.sh  less_complex3.sh  less_empty_left.sh  less_empty_right.sh  less_multiple1.sh  less_multiple2.sh  less_multiple3.sh  less_multiple_lines.sh  less_random1.sh  less_random2.sh  less_stderr1.sh  less_stderr2.sh  less_stderr3.sh  less_stderr4.sh  less_stderr5.sh  less_stdin1.sh  less_stdin2.sh  less_stdin3.sh  less_stdout1.sh  less_stdout2.sh  less_stdout3.sh  less_stdout4.sh
tests/redirections/lessand/: lessand_basic1.sh  lessand_basic2.sh  lessand_complex1.sh  lessand_complex2.sh  lessand_complex3.sh  lessand_empty.sh  lessand_empty_left.sh  lessand_empty_right.sh  lessand_multiple1.sh  lessand_multiple2.sh  lessand_multiple3.sh  lessand_multiple_lines.sh  lessand_random1.sh  lessand_random2.sh  lessand_stderr1.sh  lessand_stderr2.sh  lessand_stderr3.sh  lessand_stderr4.sh  lessand_stderr5.sh  lessand_stdin1.sh  lessand_stdin2.sh  lessand_stdin3.sh  lessand_stdout1.sh  lessand_stdout2.sh  lessand_stdout3.sh  lessand_stdout4.sh
tests/redirections/lessgreat/: lessgreat_basic1.sh  lessgreat_basic2.sh  lessgreat_complex1.sh  lessgreat_complex2.sh  lessgreat_complex3.sh  lessgreat_empty_left.sh  lessgreat_empty_right.sh  lessgreat_multiple1.sh  lessgreat_multiple2.sh  lessgreat_multiple3.sh  lessgreat_multiple_lines.sh  lessgreat_random1.sh  lessgreat_random2.sh  lessgreat_stderr1.sh  lessgreat_stderr2.sh  lessgreat_stderr3.sh  lessgreat_stderr4.sh  lessgreat_stderr5.sh  lessgreat_stdin1.sh  lessgreat_stdin2.sh  lessgreat_stdin3.sh  lessgreat_stdout1.sh  lessgreat_stdout2.sh  lessgreat_stdout3.sh  lessgreat_stdout4.sh
tests/ref_files/: file6
tests/scripts/: cat.sh  facto.sh
tests/step1/command_lists/: command_lists_echos.sh  command_lists_echos_with_semi.sh  command_lists_empty_semis.sh  command_lists_mix.sh  command_lists_mix_with_semi.sh
tests/step1/comments/: comment_after_comand_no_space.sh  comment_after_command.sh  comment_and_command.sh  comment_basic.sh  comment_long.sh  comment_multiple.sh  comment_smol.sh  comment_spaces.sh
tests/step1/if_commands/: if_broken2.sh  if_broken3.sh  if_broken4.sh  if_broken5.sh  if_else.sh  if_else_elif.sh  if_else_elif_elif.sh  if_else_list.sh  if_list_else.sh  if_list_no_else.sh  if_no_else.sh
tests/step1/simple_commands/: command_basic.sh  command_builtin.sh  command_hard.sh
tests/step1/single_quotes/: quote_bad2.sh  quote_bad3.sh  quote_multiple.sh  quote_quoteception.sh  quote_reserved1.sh  quote_reserved2.sh  quote_reserved3.sh
tests/step2/double_quotes/: dquote_bad2.sh  dquote_bad3.sh  dquote_dquoteception.sh  (+3 more)
(+117 files in other folders)
